# workflow-schemata

./: Cargo.toml  README.md
acts/: model0.toml
airflow/: dag_factory.toml  dynamic.toml  gusty.toml
argo/: workflow_create.toml
beam/: simple_filter_and_combine.json  simple_filter_and_combine.toml
github_actions/: pip-audit-ci.toml
mlflow/: recipe0.toml
src/: lib.rs
src/acts/: mod.rs  test_acts.rs
src/airflow/: dag_factory.rs  dynamic.rs  gusty.rs  mod.rs  test_airflow.rs
src/argo/: mod.rs  test_argo.rs  workflow_create.rs
src/beam/: mod.rs  pipeline.rs  test_beam_pipeline.rs
src/github_actions/: mod.rs  test_github_actions.rs
src/mlflow/: mod.rs  recipe.rs  test_mlflow_recipe.rs
